<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="enter number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_alignParentTop="true"
        android:background="@drawable/edit_text_border"
        android:layout_margin="16dp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one"
                android:text="@string/button_one"
                android:onClick="operationFunction"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_two"
                android:text="@string/button_two"
                android:onClick="operationFunction"
                style="@style/button_style"/>

            <Button
                android:id="@+id/button_three"
                android:onClick="operationFunction"
                android:text="@string/button_three"
                style="@style/button_style"/>

            <Button
                android:id="@+id/button_div"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_div"
                android:layout_marginEnd="@dimen/margin_eight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four"
                android:onClick="operationFunction"
                android:text="@string/button_four"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_five"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_five"/>

            <Button
                android:id="@+id/button_six"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_six"/>

            <Button
                android:id="@+id/button_sub"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_sub"
                android:layout_marginEnd="@dimen/margin_eight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven"
                android:onClick="operationFunction"
                android:text="@string/button_seven"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_eight"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_eight"/>

            <Button
                android:id="@+id/button_nine"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_nine"/>

            <Button
                android:id="@+id/button_plus"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_sum"
                android:layout_marginEnd="@dimen/margin_eight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:onClick="operationFunction"
                android:text="@string/button_clear"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_zero"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_zero"/>

            <Button
                android:id="@+id/button_point"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/button_point"/>

            <Button
                android:id="@+id/button_equals"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_equals"
                android:layout_marginEnd="@dimen/margin_eight" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>